# Visualizer-cpp

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  tree.txt
lib/include/: Obj_visu.h  camera.h  maths.h  read_file.h  shape.hpp  visualizer.h
src/: Obj_visu.cpp  camera.cpp  main.cpp  maths.cpp  read_file.cpp  shape.cpp  visualizer.cpp
